--- a/src/main/resources/templates/house/update-form.html
+++ b/src/main/resources/templates/house/update-form.html
@@ -55,31 +55,45 @@
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#" th:href="@{/index}">Logo</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#about">ABOUT</a></li>
-                <li><a href="#services">SERVICES</a></li>
-                <li><a href="#portfolio">PORTFOLIO</a></li>
-                <li><a href="#contact">CONTACT</a></li>
-            </ul>
-        </div>
-    </div>
+  <div class="container">
+      <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#" th:href="@{/index}">Logo</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav navbar-right">
+              <li><a href="#about">ABOUT</a></li>
+              <li><a href="#services">SERVICES</a></li>
+              <li><a href="#portfolio">PORTFOLIO</a></li>
+              <li><a href="#contact">CONTACT</a></li>
+          </ul>
+      </div>
+  </div>
 </nav>
 <div class="jumbotron text-center">
-    <h1>Real Estate Company</h1>
-    <p>We Know the Neighborhood</p>
-    <p>Join us today.</p>
-    <a href="signup" class="btn" role="button" style="color:#ffffff;background-color:#141d26;border-radius: 30px;">Sign Up</a>
-    <a href="login" class="btn" role="button" style="color:#ffffff;background-color:#141d26;border-radius: 30px;">Log in</a>
+  <h1>Real Estate Company</h1>
+  <p th:text="${{houseDTO.houseName}"></p>
+    <p th:text="${{houseDTO.street}"></p>
+<form action="#" th:action="@{/house/{id}}}" th:object="${houseDTO}" method="put">
+  <input type="text" th:field="*{datePlanted}" />
+  <p>laiba</p>
+  <select th:field="*{houseDTO.houseName}">
+  <option th:each="type : ${allTypes}"
+          th:value="${type}"
+          th:text="#{${'seedstarter.type.' + type}}">Wireframe
+  </option>
+  <ul>
+  <li th:each="ty : ${allTypes}">
+    <input type="radio" th:field="*{type}" th:value="${ty}" />
+    <label th:for="${#ids.prev('type')}" th:text="#{${'seedstarter.type.' + ty}}">Wireframe</label>
+  </li>
+</ul>
+</select>
+</form>
 </div>
 </body>
 </html>
